initialized firebase into project, configured firestore db, storage, and remote config

--- a/public/index.html
+++ b/public/index.html
@@ -18,3 +18,9 @@
     <div id="root"></div>
   </body>
 </html>
+
+<script src="/__/firebase/8.6.7/firebase-app.js"></script>
+<script src="/__/firebase/8.6.7/firebase-auth.js"></script>
+<script src="/__/firebase/8.6.7/firebase-storage.js"></script>
+<script src="/__/firebase/8.6.7/firebase-firestore.js"></script>
+<script src="/__/firebase/init.js"></script>
